tests/NormalTests/paczka1/fuzzy1/83617174.err
Error in line 4: qMlmyeQvS A319 1,9
Error in line 7: OfB4cx9rwU A867 21,0
Error in line 20: qMlmyeQvS A509 87,9
